fix: swagger for gcp iam oauth
